--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,10 @@
-annotated-types==0.7.0
-anyio==3.7.1
+fastapi==0.104.1
+uvicorn==0.24.0
+psycopg2-binary==2.9.9
+pinecone-client==3.0.0
 assemblyai==0.37.0
 boto3==1.29.3
-botocore==1.32.7
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-exceptiongroup==1.2.2
-fastapi==0.104.1
-filelock==3.18.0
-fsspec==2025.3.2
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-idna==3.10
-Jinja2==3.1.6
-jmespath==1.0.1
-MarkupSafe==3.0.2
-mpmath==1.3.0
-networkx==3.4.2
-numpy==1.26.2
-pinecone==6.0.2
-pinecone-plugin-interface==0.0.7
-psycopg2-binary==2.9.9
-pydantic==2.5.2
-pydantic_core==2.14.5
-pydub==0.25.1
-python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 python-multipart==0.0.6
+pydub==0.25.1
 requests==2.32.3
-s3transfer==0.7.0
-six==1.17.0
-sniffio==1.3.1
-starlette==0.27.0
-sympy==1.13.3
-torch==2.1.1
-typing_extensions==4.13.0
-urllib3==2.0.7
-uvicorn==0.24.0
-websockets==15.0.1
-Werkzeug==2.2.3
