--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
 # No dependencies needed for simple.py 
+fastapi==0.104.1
+uvicorn==0.24.0
+psycopg2-binary==2.9.9
+pinecone==5.0.1
+assemblyai==0.37.0
+boto3==1.29.3
+python-dotenv==1.0.0
+python-multipart==0.0.6
+pydub==0.25.1
+requests==2.32.3
+werkzeug==2.2.3
+torch==2.1.1
+sympy==1.13.3 
